fix map not showing on mobile

--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -125,12 +125,6 @@
   }
 }
 
-#singleMapPage{
-  width:100%;
-  height:100%;
-  display: flex;
-  flex-direction: column;
-}
 
 #map-post-container{
   display:flex;
